<resources>
    <string name="app_name">水浒集卡乐</string>
    <string name="tv_loading">Now Loading</string>
    <string name="dialog_clickable_hint">▼</string>
    <string name="tab_1">场景</string>
    <string name="tab_2">状态</string>
    <string name="tab_3">笔记</string>
    <string name="tab_4">收集</string>
    <string name="btn_clear">清除数据</string>
    <string name="chara_name_0">王小明</string>
    <string name="chara_name_1">暴龙哥</string>
    <string name="chara_name_2">班长黎</string>
    <string name="chara_name_3">阿蟹</string>
    <string name="chara_name_4">阿真</string>
    <string name="chara_name_5">靓仔鹏</string>
    <string name="chara_name_6">Tony</string>
    <string name="chara_name_7">霍小超</string>
    <string name="chara_name_8">燊哥</string>
    <string name="chara_name_9">阿B</string>
    <string name="chara_name_10">刘小华</string>
    <string name="chara_name_11">肥仔超</string>
    <string name="chara_name_mother">母上</string>
    <string name="chara_name_dean">主任</string>
    <string name="chara_name_teacher">老师</string>
    <string name="chara_name_girl">李小华</string>
    <string name="chara_name_badguy">米奇老虎</string>
    <string name="prologue_bedroom_weekdays">呼，做完作业了</string>
    <string name="prologue_bedroom_saturday">愉快的周六</string>
    <string name="prologue_bedroom_sunday">哎，明天又要上学</string>
    <string name="prologue_home_weekdays">又要上学了</string>
    <string name="prologue_home_saturday">周六要上补习班</string>
    <string name="prologue_home_sunday">周日不用上补习班</string>
    <string name="prologue_schoolgate">到学校了</string>
    <string name="prologue_classroom_morning">呼，上课好累</string>
    <string name="prologue_classroom_dusk">终于熬到放学了</string>
    <string name="prologue_shop_morning">先抽张卡片再说</string>
    <string name="prologue_shop_dusk">要不要买包干脆面呢</string>
    <string name="prologue_talk_news">看看有谁抽到了新卡片</string>
    <string name="prologue_shop_sunday">愉快的周日，愉快地集卡</string>
    <string name="prologue_exchange">谁有兴趣交换卡片呢</string>
    <string name="prologue_cramschool_morning">不知来补习的同学有没有新卡片</string>
    <string name="prologue_cramschool_dusk">呼，终于补完习</string>
    <string name="prologue_another_shop">便利店抽的卡好像和小卖部不同</string>
    <string name="prologue_alley">抄捷径不会有事吧</string>
    <string name="prologue_completion">看看收集的成果</string>
    <string name="map_bedroom">部屋</string>
    <string name="map_home">玄关</string>
    <string name="map_schoolgate">校门</string>
    <string name="map_classroom_morning">学校·课间</string>
    <string name="map_classroom_dusk">学校·放学后</string>
    <string name="map_shop_morning">小卖部·晨间</string>
    <string name="map_shop_dusk">小卖部·放学后</string>
    <string name="map_cramschool_morning">补习班·课间</string>
    <string name="map_cramschool_dusk">补习班·下课后</string>
    <string name="map_another_shop">便利店·黄昏</string>
    <string name="map_alley">小巷·黄昏</string>
    <string name="bedroom_select_2">睡觉</string>
    <string name="bedroom_select_3">查看进度</string>
    <string name="home_weekdays_select_2">直接去学校</string>
    <string name="home_weekdays_select_3">先绕道去小卖部</string>
    <string name="home_saturday_select_2">去补习班</string>
    <string name="home_sunday_select_2">在家学习</string>
    <string name="home_sunday_select_3">去小卖部</string>
    <string name="schoolgate_select_2">进入教室</string>
    <string name="classroom_morning_select_1">找同学聊天</string>
    <string name="classroom_morning_select_2">交换卡片</string>
    <string name="classroom_morning_select_3">等待上课</string>
    <string name="classroom_dusk_select_2">去小卖部</string>
    <string name="classroom_dusk_select_3">回家学习</string>
    <string name="cramschool_morning_select_1">找同学聊天</string>
    <string name="cramschool_morning_select_2">交换卡片</string>
    <string name="cramschool_morning_select_3">等待上课</string>
    <string name="cramschool_dusk_select_2">去便利店</string>
    <string name="cramschool_dusk_select_3">回家</string>
    <string name="shop_morning_select_2">购买零食</string>
    <string name="shop_morning_select_3">赶回学校</string>
    <string name="shop_dusk_select_1">找同学聊天</string>
    <string name="shop_dusk_select_2">购买零食</string>
    <string name="shop_dusk_select_3">交换卡片</string>
    <string name="shop_dusk_select_4">回家</string>
    <string name="shop_sunday_select_1">找同学聊天</string>
    <string name="shop_sunday_select_2">购买零食</string>
    <string name="shop_sunday_select_3">交换卡片</string>
    <string name="shop_sunday_select_4">回家</string>
    <string name="another_shop_select_2">购买零食</string>
    <string name="another_shop_select_3">回家</string>
    <string name="exchange_select_1">发起拍卖</string>
    <string name="exchange_select_2">参与拍卖</string>
    <string name="exchange_select_3">自由交换</string>
    <string name="exchange_select_4">返回</string>
    <string name="alley_select_2">回家</string>
    <string name="auction_host_ask">谁有兴趣？</string>
    <string name="auction_welcome">有兴趣的话请选择卡片</string>
    <string name="auction_no_card_warning">还没选择卡片！</string>
    <string name="auction_host_see_card">"Show Me Your Card~"</string>
    <string name="auction_host_want_better">有更好的吗？</string>
    <string name="auction_npc_thinking">小伙伴们考虑中</string>
    <string name="auction_nobody_like">杯具，没人感兴趣</string>
    <string name="auction_no_suitable_card">啊哦，没有适合的卡片</string>
    <string name="auction_host_deal">我选择\n No.</string>
    <string name="auction_host_continue">还有别的卡哟</string>
    <string name="auction_host_no_card">没有卡片了</string>
    <string name="auction_wait_this_turn">等待该轮拍卖完成…</string>
    <string name="auction_wait_remain_turn">等待剩余拍卖完成…</string>
    <string name="auction_remain_turn_over">所有剩余拍卖已完成</string>
    <string name="auction_btn_start">开拍</string>
    <string name="auction_btn_exit">退出</string>
    <string name="auction_btn_dissatisfied">不满意</string>
    <string name="auction_btn_cancel">取消</string>
    <string name="auction_btn_join">参与竞拍</string>
    <string name="auction_btn_ignore">不参与</string>
    <string name="auction_btn_confirm">选好了</string>
    <string name="auction_btn_change_card">更改卡片</string>
    <string name="auction_btn_wait_host">开始竞价</string>
    <string name="auction_btn_next">下一轮</string>
    <string name="auction_btn_change_host">换其他人</string>
    <string name="auction_all_over">没有新的卡片了，竞拍结束</string>
    <string name="auction_item_btn_deal">成交</string>
    <string name="battle_btn_pia">拍</string>
    <string name="battle_btn_back">返回</string>
    <string name="luckydraw_bag_run_out">干脆面抽光了</string>
    <string name="negotiate_ask_exchange">要交换吗</string>
    <string name="negotiate_ask_gamble">要赌卡吗</string>
    <string name="negotiate_answer_exchange_yes">行，成交</string>
    <string name="negotiate_answer_exchange_no">呃，不要</string>
    <string name="negotiate_answer_gamble_yes">好，来吧！</string>
    <string name="negotiate_answer_gamble_no">呃，不要</string>
    <string name="negotiate_no_card_warning">还没选好卡片</string>
    <string name="negotiate_btn_exchange">交换</string>
    <string name="negotiate_btn_gamble">赌卡</string>
    <string name="note_new_card">刚刚抽到点新卡：\n</string>
    <string name="note_new_card2">抽到了\n  No.</string>
    <string name="note_no_news">好像没什么新发现</string>
    <string name="note_del_warning">要删除这条笔记吗</string>
    <string name="note_btn_clear_all">清除全部</string>
    <string name="shop_welcome">欢迎光临</string>
    <string name="shop_thanks">谢谢惠顾</string>
    <string name="shop_no_enough_money">钱不够呢</string>
    <string name="shop_player_money">我的零花钱：</string>
    <string name="shop_item_btn_buy">购入</string>
    <string name="shop_item_dialog_total_price">总价：</string>
    <string name="status_item_empty">啊哦，书包空空如也</string>
    <string name="status_item_use_warning"> 确定使用吗？</string>
    <string name="sys_game_title">水浒集卡乐</string>
    <string name="sys_btn_start">开始游戏</string>
    <string name="sys_btn_collection">收 集 册</string>
    <string name="sys_general_title">系统提示</string>
    <string name="sys_back_menu_warning">要回到主菜单吗</string>
    <string name="sys_exit_game_warning">要退出游戏吗</string>
    <string name="btn_general_positive">确定</string>
    <string name="btn_general_negative">取消</string>
    <string name="week1">星期一</string>
    <string name="week2">星期二</string>
    <string name="week3">星期三</string>
    <string name="week4">星期四</string>
    <string name="week5">星期五</string>
    <string name="week6">星期六</string>
    <string name="week7">星期日</string>
    <string name="status_mood">心情：</string>
    <string name="status_popularity">人气：</string>
    <string name="status_study">学力：</string>
    <string name="status_behavior">品行：</string>
    <string name="status_money">零花钱：</string>
    <string name="status_item">道具：</string>
    <string name="item_0">干脆面</string>
    <string name="item_1">虾条</string>
    <string name="item_2">饼干</string>
    <string name="item_3">薯片</string>
    <string name="item_4">可乐</string>
    <string name="item_0_effect">【抽水浒卡】</string>
    <string name="item_1_effect">【心情+1】</string>
    <string name="item_2_effect">【心情+5】</string>
    <string name="item_3_effect">【心情+10】</string>
    <string name="item_4_effect">【心情+20】</string>
    <string name="numero">No.</string>
    <string name="page_pointer">1 / 18</string>
    <string name="hero_name">姓名：</string>
    <string name="hero_epithet">绰号：</string>
    <string name="hero_star">星宿：</string>
    <string name="hero_index">座次：</string>
    <string name="hero_value">稀有：</string>
    <string name="name1">宋江</string>
    <string name="name2">卢俊义</string>
    <string name="name3">吴用</string>
    <string name="name4">公孙胜</string>
    <string name="name5">关胜</string>
    <string name="name6">林冲</string>
    <string name="name7">秦明</string>
    <string name="name8">呼延灼</string>
    <string name="name9">花荣</string>
    <string name="name10">柴进</string>
    <string name="name11">李应</string>
    <string name="name12">朱仝</string>
    <string name="name13">鲁智深</string>
    <string name="name14">武松</string>
    <string name="name15">董平</string>
    <string name="name16">张清</string>
    <string name="name17">杨志</string>
    <string name="name18">徐宁</string>
    <string name="name19">索超</string>
    <string name="name20">戴宗</string>
    <string name="name21">刘唐</string>
    <string name="name22">李逵</string>
    <string name="name23">史进</string>
    <string name="name24">穆弘</string>
    <string name="name25">雷横</string>
    <string name="name26">李俊</string>
    <string name="name27">阮小二</string>
    <string name="name28">张横</string>
    <string name="name29">阮小五</string>
    <string name="name30">张顺</string>
    <string name="name31">阮小七</string>
    <string name="name32">杨雄</string>
    <string name="name33">石秀</string>
    <string name="name34">解珍</string>
    <string name="name35">解宝</string>
    <string name="name36">燕青</string>
    <string name="name37">朱武</string>
    <string name="name38">黄信</string>
    <string name="name39">孙立</string>
    <string name="name40">宣赞</string>
    <string name="name41">郝思文</string>
    <string name="name42">韩滔</string>
    <string name="name43">彭玘</string>
    <string name="name44">单廷珪</string>
    <string name="name45">魏定国</string>
    <string name="name46">萧让</string>
    <string name="name47">裴宣</string>
    <string name="name48">欧鹏</string>
    <string name="name49">邓飞</string>
    <string name="name50">燕顺</string>
    <string name="name51">杨林</string>
    <string name="name52">凌振</string>
    <string name="name53">蒋敬</string>
    <string name="name54">吕方</string>
    <string name="name55">郭盛</string>
    <string name="name56">安道全</string>
    <string name="name57">皇甫端</string>
    <string name="name58">王英</string>
    <string name="name59">扈三娘</string>
    <string name="name60">鲍旭</string>
    <string name="name61">樊瑞</string>
    <string name="name62">孔明</string>
    <string name="name63">孔亮</string>
    <string name="name64">项充</string>
    <string name="name65">李衮</string>
    <string name="name66">金大坚</string>
    <string name="name67">马麟</string>
    <string name="name68">童威</string>
    <string name="name69">童猛</string>
    <string name="name70">孟康</string>
</resources>